# -tumeloroot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tumeloroot.spec
tests/: test_device_profile.py  test_vbmeta_patcher.py
tumeloroot/: __init__.py  __main__.py  app.py
tumeloroot/core/: adb_bridge.py  backup_manager.py  boot_patcher.py  device_profile.py  engine.py  magisk_patcher.py  mtk_bridge.py  platform_utils.py  prerequisite_checker.py  vbmeta_patcher.py
tumeloroot/devices/: _template.yaml  lenovo_tb330xup.yaml
tumeloroot/gui/: theme.py  wizard.py
tumeloroot/gui/pages/: backup_page.py  complete_page.py  connect_page.py  oem_unlock_page.py  patch_page.py  prerequisites_page.py  unlock_page.py  verify_page.py  welcome_page.py
tumeloroot/gui/resources/styles/: dark.qss
tumeloroot/gui/widgets/: device_animation.py  device_info_card.py  log_console.py  progress_panel.py  step_illustrations.py
